improving usage of ContestConfig; code simplification